fixed cutoff of first image and changed width of svg

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,6 +9,7 @@
   background-color: var(--base-100);
   font-family: 'BBH Hegarty', sans-serif;
   color: var(--base-200);
+  overflow: hidden;
 
   .hero {
     height: 100vh;
@@ -76,7 +77,7 @@
     }
     .svgContainer {
       height: 120%;
-      width: 150%;
+      width: 100%;
       position: absolute;
       top: -40vh;
     }
